--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,41 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" 
-        crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" 
-        crossorigin="anonymous"></script>
-
-        <!-- Custom CSS / Link naar static stijl bestand CSS -->
-        <link rel="stylesheet" href="{% static 'css/stijl.css' %}">
-        <title></title>
-    </head>
-    <body>
-        <header><h1 id="koptekst">Mijn website</h1>
-        </header>
-        <main>
-            <div class="artikelen-div">
-                {% block content %}
-                {% for post in posts %}
-                <article class="post">
-                    <time class="date">
-                        {{post.published_date }}
-                    </time>
-                    <h2><a href="" class="post-titel">{{post.title}}</a></h2>
-                    <p>{{post.text|linebreaksbr}}</p>
-                </article>
-                {% endfor %}
-                {% endblock %}
-            </div>
-        </main>
-        <footer></footer>
-    
-    </body>
-</html>
+{% extends 'blog/base.html' %}
+{% block inhoud %}
+{% for post in posts %}
+    <article class="post">
+    <time class="date">
+        {{post.published_date }}
+    </time>
+    <h2><a href="{% url 'post_inhoud' pk=post.pk %}" class="post-titel">{{post.title}}</a></h2>
+    <p>{{post.text|linebreaksbr}}</p>
+    </article>
+{% endfor %}
+{% endblock %}
